@@ -67,4 +67,9 @@ typedef void (*dstepper_fn_t) (dxWorld *world, dxBody * const *body, int nb,
 void dxProcessIslands (dxWorld *world, dReal stepsize, dstepper_fn_t stepper);
 
 
+
+/* Makes sure the matrix is a proper rotation */
+void dOrthogonalizeR(dMatrix3 m);
+
+
 #endif
